demo13/security-group.tf
resource "aws_security_group" "tf-security-group" {
  vpc_id = aws_vpc.tf-vpc.id
  name = "tf-security-group"
  description = "ingress and all egress traffic"
  ingress {
      from_port = 8000
      to_port = 8000
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 22
      to_port = 22
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  } 

  egress {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
  }

tags = {
    Name = "tf-security-group"
  }
}
